# atspicli

./: Cargo.toml  Justfile  README.md  deny.toml  spike.rs
debian/: atspicli.substvars  changelog  control  copyright  debhelper-build-stamp  files  rules
debian/atspicli/DEBIAN/: control  md5sums
debian/atspicli/usr/share/doc/atspicli/: README.Debian
docs/compat/: axcli-command-matrix.md
docs/debian/: build-depends.md  target-matrix.md
scripts/: bootstrap-cli.sh  check-system-deps.sh
scripts/ci/: run-headless-tests.sh
src/: error.rs  lib.rs  main.rs
src/adapters/: mock.rs  mod.rs
src/adapters/atspi/: capture.rs  mod.rs  query.rs  session.rs  tree.rs
src/core/: command.rs  execution_context.rs  locator.rs  mod.rs  model.rs  redaction.rs
src/ui_cli/: parser.rs
tests/: action_phase_a.rs  action_phase_b.rs  action_phase_c.rs  locator_limits.rs  log_redaction.rs  readonly_commands.rs  repro_redaction.rs  screenshot_command.rs  sensitive_node_policy.rs  wait_polling.rs
tests/common/: mod.rs
